# savinmi.ru

./: .editorconfig  .gitignore  .markdownlint.yaml  .yfm  404.html  Dockerfile  Makefile  README.md  Taskfile.yml  docker-compose.yml  index.html  mkdocs.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.txt  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: ci.yml  codeql-analysis.yml  mkdocs.yml  yfm.yml
assets/js/: yandex.metrika.js
awards/: index.html
docs/: CNAME  aboutme.md  awards.md  education.md  experience.md  index.md  index.yaml  interests.md  presets.yaml  skills.md  toc.yaml
education/: index.html
experience/: index.html
interests/: index.html
scripts/: build-pdf.js  htaccess_migrator.py  hugo2mkdocs.py  pdf.js  render-assets.js  render-pdf.js  render-scripts.js  start-debug.js  start.js
skills/: index.html
src/js/: html2canvas.min.js  pdf.js  printer.js  scripts.js  twitter.js
src/pug/: index.pug
src/scss/: _global.scss  _variables.scss  styles.scss
src/scss/components/: _icons.scss  _printer.scss  _sidenav.scss
src/scss/sections/: _resume-section.scss
src/scss/variables/: _colors.scss  _spacing.scss  _typography.scss
